--- a/Main/index.html
+++ b/Main/index.html
@@ -158,6 +158,16 @@
 			<button type="button" class="help-modal__close-btn">Close</button>
 		</div>
 	</div>
+	
+	<!-- Credits -->
+	<div class="credits">
+		<div class="credits-label">Credits</div>
+		<div class="credits-details">
+			<div>Firework by XiuSe</div>
+			<div>Heart by Johnxxx</div>
+			<div>Cooker by NamMap</div>
+		</div>
+	</div>
 </div>
 <!-- partial -->
 <script src="./js/fscreen_1.0.1.js"></script>
